# kubectl-check

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: release.yml
scripts/: next-release.sh
src/: main.rs
src/config/: kubeconfig.rs  metadata.rs  mod.rs  opts.rs
src/error/: mod.rs
src/utils/: mod.rs  parse_option.rs
