[package]
name = "kubectl-check"
description = "Check for kubernetes metadata before executes command"
homepage = "https://github.com/BeLeap/kubectl-check"
repository = "https://github.com/BeLeap/kubectl-check"
license = "MIT"
version = "0.2439.1"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
atty = "0.2.14"
yaml-rust2 = "0.9.0"
