[package]
name = "kubectl-check"
description = "A CLI tool to prompt users for confirmation before running potentially unsafe kubectl commands."
homepage = "https://github.com/BeLeap/kubectl-check"
repository = "https://github.com/BeLeap/kubectl-check"
license = "MIT"
version = "0.2439.4"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
atty = "0.2.14"
yaml-rust2 = "0.9.0"
colored = "2"
